--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <script type="text/javascript" src="/dist/neurahive.umd.js"></script>
+    <script type="text/javascript" src="/dist/zerogda.umd.js"></script>
     <script type="text/javascript">
         async function go() {
             const blob = document.getElementById('uploader').files[0];
-            const file = new neurahive.NHBlob(blob)
+            const file = new zerogda.NHBlob(blob)
             console.log("fileSize", file.fileSize);
             const [tree, err] = await file.merkleTree();
             console.log(`tree is`, tree.rootHash());
